--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
 
-  <script src="./src/app.js"></script>
+  <script src="./src/app/alert.service.js"></script>
+  <script src="./src/app/calculator.service.js"></script>
+  <script src="./src/app/jokes.service.js"></script>
+  <script src="./src/app/utils/cekInputValid.js"></script>
+  <script src="./src/app/utils/parseInput.js"></script>
+  <script src="./src/app/app.js"></script>
 </body>
 
 </html>
